cash entry and connection with customer optional
