# models/cash_entry.go
@@ -3,15 +3,17 @@ package models
 import "time"
 
 type CashEntry struct {
-	ID          uint    `gorm:"primaryKey"`
-	UserID      uint    `gorm:"not null"`
-	ShopID      uint    `gorm:"not null"`
+	ID          uint `gorm:"primaryKey"`
+	UserID      uint `gorm:"not null"`
+	ShopID      uint `gorm:"not null"`
+	CustomerID  *uint
 	Amount      float64 `gorm:"not null"`
 	Description string  `gorm:"size:255"`
 	EntryType   string  `gorm:"size:10;not null"` // e.g., income, expense
 	CreatedAt   time.Time
 	UpdatedAt   time.Time
 
-	User User `gorm:"foreignKey:UserID"`
-	Shop Shop `gorm:"foreignKey:ShopID"`
+	User     User      `gorm:"foreignKey:UserID"`
+	Shop     Shop      `gorm:"foreignKey:ShopID"`
+	Customer *Customer `gorm:"foreignKey:CustomerID"`
 }
